<resources>
    <string name="app_name">MacroBuddy</string>
    <string name="Gender">Geslacht</string>
    <string name="date_of_birth">Geboorte datum</string>
    <string name="length">Lengte in cm</string>
    <string name="weight">Gewicht in kg</string>
    <string name="goal">Doel</string>
    <string name="male">Man</string>
    <string name="female">Vrouw</string>
    <string name="goal_maintain">Gewicht behouden</string>
    <string name="goal_lose">Afvallen</string>
    <string name="goal_gain">Aankomen</string>
    <string name="calculate">Bereken!</string>
    <string name="rate_of_activity">activiteitsgraad</string>
    <string name="activity_one">Niet actief</string>
    <string name="activity_two">Licht actief</string>
    <string name="activity_three">Aardig actief</string>
    <string name="activity_four">Erg actief</string>
    <string name="activity_five">Zeer actief</string>
    <string name="current_weight">Huidig gewicht(kg)</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="vats">Vet</string>
    <string name="callories">Callorieën</string>
    <string name="kg">KG</string>
    <string name="weight_history">Gewicht history</string>
</resources>
